// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<VisitsStats /> > loads visits when mounted 1`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
    data-testid="line-chart-card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="d-flex align-content-center gap-1"
      >
        <button
          aria-controls=":r20:"
          aria-expanded="false"
          aria-label="Expand"
          class="btn btn-link btn-sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-and-down-left-from-center "
            data-icon="up-right-and-down-left-from-center"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M344 0H488c13.3 0 24 10.7 24 24V168c0 9.7-5.8 18.5-14.8 22.2s-19.3 1.7-26.2-5.2l-39-39-87 87c-9.4 9.4-24.6 9.4-33.9 0l-32-32c-9.4-9.4-9.4-24.6 0-33.9l87-87L327 41c-6.9-6.9-8.9-17.2-5.2-26.2S334.3 0 344 0zM168 512H24c-13.3 0-24-10.7-24-24V344c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2l39 39 87-87c9.4-9.4 24.6-9.4 33.9 0l32 32c9.4 9.4 9.4 24.6 0 33.9l-87 87 39 39c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="d-flex align-items-center dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
      id=":r20:"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 2`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
    data-testid="line-chart-card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="d-flex align-content-center gap-1"
      >
        <button
          aria-controls=":r23:"
          aria-expanded="false"
          aria-label="Expand"
          class="btn btn-link btn-sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-and-down-left-from-center "
            data-icon="up-right-and-down-left-from-center"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M344 0H488c13.3 0 24 10.7 24 24V168c0 9.7-5.8 18.5-14.8 22.2s-19.3 1.7-26.2-5.2l-39-39-87 87c-9.4 9.4-24.6 9.4-33.9 0l-32-32c-9.4-9.4-9.4-24.6 0-33.9l87-87L327 41c-6.9-6.9-8.9-17.2-5.2-26.2S334.3 0 344 0zM168 512H24c-13.3 0-24-10.7-24-24V344c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2l39 39 87-87c9.4-9.4 24.6-9.4 33.9 0l32 32c9.4 9.4 9.4 24.6 0 33.9l-87 87 39 39c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="d-flex align-items-center dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
      id=":r23:"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 3`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
    data-testid="line-chart-card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="d-flex align-content-center gap-1"
      >
        <button
          aria-controls=":r26:"
          aria-expanded="false"
          aria-label="Expand"
          class="btn btn-link btn-sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-and-down-left-from-center "
            data-icon="up-right-and-down-left-from-center"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M344 0H488c13.3 0 24 10.7 24 24V168c0 9.7-5.8 18.5-14.8 22.2s-19.3 1.7-26.2-5.2l-39-39-87 87c-9.4 9.4-24.6 9.4-33.9 0l-32-32c-9.4-9.4-9.4-24.6 0-33.9l87-87L327 41c-6.9-6.9-8.9-17.2-5.2-26.2S334.3 0 344 0zM168 512H24c-13.3 0-24-10.7-24-24V344c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2l39 39 87-87c9.4-9.4 24.6-9.4 33.9 0l32 32c9.4 9.4 9.4 24.6 0 33.9l-87 87 39 39c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="d-flex align-items-center dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
      id=":r26:"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 4`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
    data-testid="line-chart-card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="d-flex align-content-center gap-1"
      >
        <button
          aria-controls=":r29:"
          aria-expanded="false"
          aria-label="Expand"
          class="btn btn-link btn-sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-and-down-left-from-center "
            data-icon="up-right-and-down-left-from-center"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M344 0H488c13.3 0 24 10.7 24 24V168c0 9.7-5.8 18.5-14.8 22.2s-19.3 1.7-26.2-5.2l-39-39-87 87c-9.4 9.4-24.6 9.4-33.9 0l-32-32c-9.4-9.4-9.4-24.6 0-33.9l87-87L327 41c-6.9-6.9-8.9-17.2-5.2-26.2S334.3 0 344 0zM168 512H24c-13.3 0-24-10.7-24-24V344c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2l39 39 87-87c9.4-9.4 24.6-9.4 33.9 0l32 32c9.4 9.4 9.4 24.6 0 33.9l-87 87 39 39c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="d-flex align-items-center dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
      id=":r29:"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(29, 170, 88);"
          />
          <strong>
            Previous period
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 5`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
    data-testid="line-chart-card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="d-flex align-content-center gap-1"
      >
        <button
          aria-controls=":r2c:"
          aria-expanded="false"
          aria-label="Expand"
          class="btn btn-link btn-sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-and-down-left-from-center "
            data-icon="up-right-and-down-left-from-center"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M344 0H488c13.3 0 24 10.7 24 24V168c0 9.7-5.8 18.5-14.8 22.2s-19.3 1.7-26.2-5.2l-39-39-87 87c-9.4 9.4-24.6 9.4-33.9 0l-32-32c-9.4-9.4-9.4-24.6 0-33.9l87-87L327 41c-6.9-6.9-8.9-17.2-5.2-26.2S334.3 0 344 0zM168 512H24c-13.3 0-24-10.7-24-24V344c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2l39 39 87-87c9.4-9.4 24.6-9.4 33.9 0l32 32c9.4 9.4 9.4 24.6 0 33.9l-87 87 39 39c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="d-flex align-items-center dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
      id=":r2c:"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(29, 170, 88);"
          />
          <strong>
            Previous period
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`<VisitsStats /> > loads visits when mounted 6`] = `
<div
  class="col-12 mt-3"
  data-testid="line-chart-container"
>
  <div
    class="card"
    data-testid="line-chart-card"
  >
    <div
      aria-level="4"
      class="d-flex justify-content-between align-items-center card-header"
      role="heading"
    >
      Visits over time
      <div
        class="d-flex align-content-center gap-1"
      >
        <button
          aria-controls=":r2f:"
          aria-expanded="false"
          aria-label="Expand"
          class="btn btn-link btn-sm"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-up-right-and-down-left-from-center "
            data-icon="up-right-and-down-left-from-center"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M344 0H488c13.3 0 24 10.7 24 24V168c0 9.7-5.8 18.5-14.8 22.2s-19.3 1.7-26.2-5.2l-39-39-87 87c-9.4 9.4-24.6 9.4-33.9 0l-32-32c-9.4-9.4-9.4-24.6 0-33.9l87-87L327 41c-6.9-6.9-8.9-17.2-5.2-26.2S334.3 0 344 0zM168 512H24c-13.3 0-24-10.7-24-24V344c0-9.7 5.8-18.5 14.8-22.2s19.3-1.7 26.2 5.2l39 39 87-87c9.4-9.4 24.6-9.4 33.9 0l32 32c9.4 9.4 9.4 24.6 0 33.9l-87 87 39 39c6.9 6.9 8.9 17.2 5.2 26.2s-12.5 14.8-22.2 14.8z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="d-flex align-items-center dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            class="btn-sm p-0 dropdown-toggle btn btn-link"
            type="button"
          >
            Group by
          </button>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-end"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item active"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Month
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Week
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Day
            </button>
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Hour
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body"
      id=":r2f:"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 400px; min-width: 0;"
      />
      <ul
        class="list-unstyled mb-0 mt-2 d-flex flex-wrap justify-content-center gap-3"
      >
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(70, 150, 229);"
          />
          <strong>
            Visits
             (
            3
            )
          </strong>
        </li>
        <li
          class="d-inline"
        >
          <div
            class="color-bullet"
            style="background-color: rgb(29, 170, 88);"
          />
          <strong>
            Previous period
             (
            3
            )
          </strong>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
